# hangman

./: .gitignore  .mcp.json  CLAUDE.md  CONTINUITY.md  LICENSE  Makefile  README.md
.claude/: settings.json
backend/: README.md  pyproject.toml  words.test.txt  words.txt
backend/src/hangman/: __init__.py  db.py  errors.py  game.py  main.py  models.py  paths.py  routes.py  schemas.py  sessions.py  words.py
backend/tests/: conftest.py
backend/tests/fixtures/branch_coverage/: fake_adjacency.py  golden_coverage.html  golden_coverage.json
backend/tests/fixtures/dashboard/: coverage_fixtures.py  golden_render.html  llm_response_good.json  llm_response_malformed.json  minimal.ndjson  multi_scenario.ndjson
backend/tests/integration/: __init__.py  test_categories.py  test_games_current.py  test_games_forfeit.py  test_games_start.py  test_guesses.py  test_history.py  test_models_smoke.py  test_session_cookie.py  test_session_endpoint.py
backend/tests/unit/: __init__.py  test_errors.py  test_game.py  test_schemas.py  test_words.py  test_words_file_env.py
backend/tools/branch_coverage/: .coveragerc  __main__.py  analyzer.py  callgraph.py  coverage_data.py  grader.py  json_emitter.py  middleware.py  models.py  reachability.py  renderer.py  routes.py  serve.py
backend/tools/branch_coverage/templates/: _endpoint_card.html.j2  _function_drilldown.html.j2  base.html.j2
backend/tools/dashboard/: __main__.py  analyzer.py  coverage.py  history.py  models.py  packager.py  parser.py  renderer.py
backend/tools/dashboard/llm/: client.py  cost.py  rubric.py  tool_schema.py
(+133 files in other folders)
