[project]
name = "hangman"
version = "0.1.0"
description = "Local HTTP hangman game — FastAPI backend."
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136,<0.137",
    "pydantic>=2.13,<3",
    "sqlalchemy>=2.0.49,<2.1",
    "uvicorn[standard]>=0.45,<0.46",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5,<6",
    "httpx>=0.28,<1",
    "ruff>=0.15,<0.16",
    "mypy>=1.13,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hangman"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["hangman"]
mypy_path = "src"
